--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "@angular/platform-browser": "^15.2.0",
     "@angular/platform-browser-dynamic": "^15.2.0",
     "@angular/router": "^15.2.0",
+    "@ngx-translate/core": "^14.0.0",
+    "@ngx-translate/http-loader": "^7.0.0",
     "kant-search-api": "file:kant-search-api-generated/kant-search-api-0.3.0.tgz",
     "primeflex": "^3.3.0",
     "primeng": "^15.4.1",
