--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@ngx-translate/http-loader": "^7.0.0",
     "kant-search-api": "file:kant-search-api-generated/kant-search-api-0.3.4.tgz",
     "primeflex": "^3.3.0",
+    "primeicons": "^6.0.1",
     "primeng": "^15.4.1",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
