--- a/package.json
+++ b/package.json
@@ -20,12 +20,13 @@
     "@angular/router": "^15.2.0",
     "@ngx-translate/core": "^14.0.0",
     "@ngx-translate/http-loader": "^7.0.0",
-    "kant-search-api": "file:kant-search-api-generated/kant-search-api-0.5.3.tgz",
+    "@types/snowball-stemmers": "^0.6.0",
+    "snowball-stemmers": "^0.6.0",
+    "kant-search-api": "file:kant-search-api-generated/kant-search-api-0.5.5.tgz",
     "primeflex": "^3.3.0",
     "primeicons": "^6.0.1",
     "primeng": "^15.4.1",
     "rxjs": "~7.8.0",
-    "@types/snowball-stemmers": "^0.6.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.12.0"
   },
