--- a/package.json
+++ b/package.json
@@ -19,10 +19,12 @@
     "@angular/platform-browser-dynamic": "^15.2.0",
     "@angular/router": "^15.2.0",
     "@ngrx/component-store": "^15.4.0",
+    "@ngrx/effects": "^15.4.0",
     "@ngrx/store": "^15.4.0",
     "@ngx-translate/core": "^14.0.0",
     "@ngx-translate/http-loader": "^7.0.0",
     "@types/snowball-stemmers": "^0.6.0",
+    "jasmine-marbles": "^0.9.2",
     "kant-search-api": "file:kant-search-api-generated/kant-search-api-0.8.5.tgz",
     "primeflex": "^3.3.0",
     "primeicons": "^6.0.1",
