--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "@ngx-translate/http-loader": "^7.0.0",
     "@types/snowball-stemmers": "^0.6.0",
     "jasmine-marbles": "^0.9.2",
-    "kant-search-api": "file:kant-search-api-generated/kant-search-api-0.15.1.tgz",
+    "@frhorschig/kant-search-api": "0.15.2",
     "primeflex": "^3.3.0",
     "primeicons": "^6.0.1",
     "primeng": "^15.4.1",
