--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -20,5 +20,7 @@ jobs:
           node-version: 20
           cache: "npm"
       - run: npm ci
+        env:
+          GITHUB_TOKEN: ${{ secrets.API_PKG_PAT }}
       - run: npm run build --if-present
       - run: npm test
