fix: use --watch=false for pipeline tests

--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -23,4 +23,4 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.API_PKG_PAT }}
       - run: npm run build --if-present
-      - run: npm test
+      - run: npm test -- --watch=false
