--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -18,5 +18,5 @@ jobs:
       - run: npm ci
         env:
           GITHUB_TOKEN: ${{ secrets.API_PKG_PAT }}
-      - run: npm run build --if-present
+      - run: npm run build
       - run: npm test -- --watch=false
