--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -8,14 +8,18 @@ jobs:
   test:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3
+      - name: checkout
+        uses: actions/checkout@v3
       - name: set up node
         uses: actions/setup-node@v3
         with:
           node-version: 20
           cache: "npm"
-      - run: npm ci
+      - name: install packages
+        run: npm ci
         env:
           GITHUB_TOKEN: ${{ secrets.API_PKG_PAT }}
-      - run: npm run build --if-present
-      - run: npm test -- --watch=false
+      - name: build application
+        run: npm run build --if-present
+      - name: run tests
+        run: npm test -- --watch=false
