--- a/package.json
+++ b/package.json
@@ -18,25 +18,26 @@
     "@angular/platform-browser": "^17.2.2",
     "@angular/platform-browser-dynamic": "^17.2.2",
     "@angular/router": "^17.2.2",
-    "@ngrx/component-store": "^16.0.0",
-    "@ngrx/effects": "^16.0.0",
-    "@ngrx/store": "^16.0.0",
-    "@ngx-translate/core": "^14.0.0",
-    "@ngx-translate/http-loader": "^7.0.0",
+    "@frhorschig/kant-search-api": "0.17.0",
+    "@ngrx/component-store": "^17.1.1",
+    "@ngrx/effects": "^17.1.1",
+    "@ngrx/store": "^17.1.1",
+    "@ngx-translate/core": "^15.0.0",
+    "@ngx-translate/http-loader": "^8.0.0",
     "@types/snowball-stemmers": "^0.6.0",
     "jasmine-marbles": "^0.9.2",
-    "primeflex": "^3.3.0",
+    "primeflex": "^3.3.1",
     "primeicons": "^6.0.1",
-    "primeng": "^16.0.0",
-    "rxjs": "~7.8.0",
+    "primeng": "^17.8.0",
+    "rxjs": "^7.8.0",
     "snowball-stemmers": "^0.6.0",
-    "tslib": "^2.3.0",
+    "tslib": "^2.6.2",
     "zone.js": "~0.14.4"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^17.2.1",
-    "@angular/cli": "~17.2.1",
-    "@angular/compiler-cli": "^17.2.2",
+    "@angular-devkit/build-angular": "^17.2.0",
+    "@angular/cli": "~17.2.0",
+    "@angular/compiler-cli": "^17.2.0",
     "@types/jasmine": "~4.3.0",
     "jasmine-core": "~4.5.0",
     "karma": "~6.4.0",
