--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "kant-search-frontend",
-  "version": "0.2.0",
+  "version": "0.3.0",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
@@ -10,34 +10,34 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^15.2.0",
-    "@angular/common": "^15.2.0",
-    "@angular/compiler": "^15.2.0",
-    "@angular/core": "^15.2.0",
-    "@angular/forms": "^15.2.0",
-    "@angular/platform-browser": "^15.2.0",
-    "@angular/platform-browser-dynamic": "^15.2.0",
-    "@angular/router": "^15.2.0",
-    "@frhorschig/kant-search-api": "0.16.0",
-    "@ngrx/component-store": "^15.4.0",
-    "@ngrx/effects": "^15.4.0",
-    "@ngrx/store": "^15.4.0",
-    "@ngx-translate/core": "^14.0.0",
-    "@ngx-translate/http-loader": "^7.0.0",
+    "@angular/animations": "^17.2.2",
+    "@angular/common": "^17.2.2",
+    "@angular/compiler": "^17.2.2",
+    "@angular/core": "^17.2.2",
+    "@angular/forms": "^17.2.2",
+    "@angular/platform-browser": "^17.2.2",
+    "@angular/platform-browser-dynamic": "^17.2.2",
+    "@angular/router": "^17.2.2",
+    "@frhorschig/kant-search-api": "0.17.0",
+    "@ngrx/component-store": "^17.1.1",
+    "@ngrx/effects": "^17.1.1",
+    "@ngrx/store": "^17.1.1",
+    "@ngx-translate/core": "^15.0.0",
+    "@ngx-translate/http-loader": "^8.0.0",
     "@types/snowball-stemmers": "^0.6.0",
     "jasmine-marbles": "^0.9.2",
-    "primeflex": "^3.3.0",
+    "primeflex": "^3.3.1",
     "primeicons": "^6.0.1",
-    "primeng": "^15.4.1",
-    "rxjs": "~7.8.0",
+    "primeng": "^17.8.0",
+    "rxjs": "^7.8.0",
     "snowball-stemmers": "^0.6.0",
-    "tslib": "^2.3.0",
-    "zone.js": "~0.12.0"
+    "tslib": "^2.6.2",
+    "zone.js": "~0.14.4"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^15.2.6",
-    "@angular/cli": "~15.2.6",
-    "@angular/compiler-cli": "^15.2.0",
+    "@angular-devkit/build-angular": "^17.2.0",
+    "@angular/cli": "~17.2.0",
+    "@angular/compiler-cli": "^17.2.0",
     "@types/jasmine": "~4.3.0",
     "jasmine-core": "~4.5.0",
     "karma": "~6.4.0",
@@ -47,6 +47,6 @@
     "karma-jasmine-html-reporter": "~2.0.0",
     "karma-mocha-reporter": "^2.2.5",
     "puppeteer": "^21.3.1",
-    "typescript": "~4.9.4"
+    "typescript": "~5.3.3"
   }
 }
