--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -19,7 +19,11 @@ jobs:
           echo "OWNER=$(echo $OWNER | awk '{print tolower($0)}')" >> $GITHUB_ENV
           echo "VERSION=$(echo ${GITHUB_REF#refs/tags/} | sed 's/^v//')" >> $GITHUB_ENV
       - name: build Docker image
-        run: make
+        run: |
+          docker build \
+            -f ./deployment/Dockerfile \
+            -t ghcr.io/frhorschig/kant-search-database:latest \
+            .
 
       - name: login to ghcr
         uses: docker/login-action@v3
