build: update Dockerfile and Nginx config file

--- a/deployment/nginx.conf
+++ b/deployment/nginx.conf
@@ -1,38 +1,24 @@
-worker_processes 1;
+server {
+    listen 4200 ssl;
 
-events {
-    worker_connections  1024;
-}
+    ssl_certificate /etc/nginx/ssl/server.crt;
+    ssl_certificate_key /etc/nginx/ssl/server.key;
+    ssl_protocols TLSv1.3;
+    ssl_ciphers 'TLS_AES_256_GCM_SHA384';
+    ssl_prefer_server_ciphers on;
+    ssl_session_cache shared:SSL:1m;
+    ssl_session_timeout 24h;
 
-http{
-    server {
-        listen 80;
-        server_name localhost;
-        location / {
-            return 301 https://$host:4200$request_uri;
-        }
+    add_header X-Frame-Options "SAMEORIGIN";
+    add_header X-Content-Type-Options "nosniff";
+    add_header X-XSS-Protection "1; mode=block";
+
+    root   /usr/share/nginx/html;
+    index  index.html;
+    location / {
+        try_files $uri $uri/ /index.html;
     }
-    
-    server {
-        listen 4200 ssl;
-        server_name localhost;
-    
-        root   /usr/share/nginx/html;
-        index  index.html index.htm;
-        include /etc/nginx/mime.types;
-    
-        ssl_certificate /etc/nginx/conf.d/cert.pem;
-        ssl_certificate_key /etc/nginx/conf.d/key.pem;
-    
-        gzip on;
-        gzip_min_length 1000;
-        gzip_proxied expired no-cache no-store private auth;
-        gzip_types text/plain text/css application/json application/javascript application/x-javascript text/xml application/xml application/xml+rss text/javascript;
-    
-        location / {
-            root /usr/share/nginx/html;
-            index index.html index.htm;
-            try_files $uri $uri/ /index.html =404;
-        }
-    }
+
+    access_log /var/log/nginx/kan-search_access.log;
+    error_log /var/log/nginx/kan-search_error.log;
 }
