--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -10,13 +10,15 @@ jobs:
     name: create new tag
     runs-on: ubuntu-latest
     if: ${{ !github.event.forced }}
+    env:
+      VERSION_NPM: $(.github/scripts/extract_version.sh)
     steps:
       - name: create tag
         id: create_tag
         uses: mathieudutour/github-tag-action@v6.2
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
-          custom_tag: $(.github/scripts/extract_version.sh)
+          custom_tag: ${{ env.VERSION_NPM }}
     outputs:
       new_tag: ${{ steps.create_tag.outputs.new_tag }}
 
@@ -62,6 +64,7 @@ jobs:
         uses: actions/download-artifact@v4
         with:
           name: kant-search-frontend
+          path: ./
       - name: build Docker image
         run: |
           docker build \
@@ -92,6 +95,7 @@ jobs:
         uses: actions/download-artifact@v4
         with:
           name: kant-search-frontend
+          path: ./
       - name: create release
         uses: softprops/action-gh-release@v2.0.4
         with:
@@ -108,6 +112,9 @@ jobs:
         uses: actions/download-artifact@v4
         with:
           name: kant-search-frontend
+          path: ./
+      - name: debug
+        run: ls -la
       - name: configure registry
         run: |
           npm config set registry https://npm.pkg.github.com
