--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -11,12 +11,17 @@ jobs:
     runs-on: ubuntu-latest
     if: ${{ !github.event.forced }}
     steps:
+      - name: read tag number
+        run: |
+          echo "VERSION=$(.github/scripts/extract_version.sh)" >> $GITHUB_ENV
+      - name: debug
+        run: echo "${{ env.VERSION }}"
       - name: create tag
         id: create_tag
         uses: mathieudutour/github-tag-action@v6.2
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
-          custom_tag: $(.github/scripts/extract_version.sh)
+          custom_tag: ${{ env.VERSION }}
     outputs:
       new_tag: ${{ steps.create_tag.outputs.new_tag }}
 
@@ -57,11 +62,11 @@ jobs:
       - name: adjust env variables
         run: |
           echo "OWNER=$(echo $OWNER | awk '{print tolower($0)}')" >> $GITHUB_ENV
-          echo "VERSION=$(.github/scripts/extract_version.sh)" >> $GITHUB_ENV
       - name: download the build artifact
         uses: actions/download-artifact@v4
         with:
           name: kant-search-frontend
+          path: kant-search-frontend
       - name: build Docker image
         run: |
           docker build \
@@ -92,27 +97,10 @@ jobs:
         uses: actions/download-artifact@v4
         with:
           name: kant-search-frontend
+          path: kant-search-frontend
       - name: create release
         uses: softprops/action-gh-release@v2.0.4
         with:
           tag_name: ${{ needs.create-tag.outputs.new_tag }}
           files: kant-search-frontend
           token: ${{ secrets.GITHUB_TOKEN }}
-
-  publish-npm:
-    name: publish NPM package
-    runs-on: ubuntu-latest
-    needs: [create-tag, build]
-    steps:
-      - name: download the build artifact
-        uses: actions/download-artifact@v4
-        with:
-          name: kant-search-frontend
-      - name: configure registry
-        run: |
-          npm config set registry https://npm.pkg.github.com
-          npm set //npm.pkg.github.com/:_authToken ${{ secrets.GITHUB_TOKEN }}
-      - name: publish package
-        working-directory: kant-search-frontend
-        run: |
-          npm publish
