--- a/deployment/nginx.conf
+++ b/deployment/nginx.conf
@@ -1,5 +1,5 @@
 server {
-    listen 4200 ssl;
+    listen 4200 ssl http2;
 
     ssl_certificate /etc/nginx/ssl/server.crt;
     ssl_certificate_key /etc/nginx/ssl/server.key;
