--- a/.github/workflows/check-tag.yaml
+++ b/.github/workflows/check-tag.yaml
@@ -14,6 +14,10 @@ jobs:
         run: |
           echo "VERSION_NPM=$(.github/scripts/extract_version.sh)" >> $GITHUB_ENV
           echo "VERSION_TAG=$(echo ${GITHUB_REF#refs/tags/} | sed 's/^v//')" >> $GITHUB_ENV
+      - name: echo version info
+        run: |
+          echo $VERSION_NPM 
+          echo $VERSION_TAG
       - name: fail job if version check fails
         run: |
           function version_gt() { test "$(printf '%s\n' "$@" | sort -V | head -n 1)" != "$1"; }
