--- a/.github/workflows/check-tag.yaml
+++ b/.github/workflows/check-tag.yaml
@@ -10,17 +10,16 @@ jobs:
     steps:
       - name: checkout
         uses: actions/checkout@v3
+        with:
+          fetch-depth: 0
       - name: create version env variables
         run: |
           echo "VERSION_NPM=$(.github/scripts/extract_version.sh)" >> $GITHUB_ENV
-          echo "VERSION_TAG=$(echo ${GITHUB_REF#refs/tags/} | sed 's/^v//')" >> $GITHUB_ENV
-      - name: echo version info
-        run: |
-          echo $VERSION_NPM 
-          echo $VERSION_TAG
+          echo "VERSION_TAG=$(git describe --tags $(git rev-list --tags --max-count=1) | cut -c 2-)" >> $GITHUB_ENV
       - name: fail job if version check fails
         run: |
           function version_gt() { test "$(printf '%s\n' "$@" | sort -V | head -n 1)" != "$1"; }
           if ! version_gt $VERSION_NPM $VERSION_TAG; then
+            echo "NPM version $VERSION_NPM is not greater that the latest tag number $VERSION_TAG"
             exit 1
           fi
