--- a/deployment/nginx.conf
+++ b/deployment/nginx.conf
@@ -1,8 +1,8 @@
 server {
     listen 4200 ssl http2;
 
-    ssl_certificate /etc/nginx/ssl/server.crt;
-    ssl_certificate_key /etc/nginx/ssl/server.key;
+    ssl_certificate /etc/nginx/ssl/ks-gui.crt;
+    ssl_certificate_key /etc/nginx/ssl/ks-gui.key;
     ssl_protocols TLSv1.3;
     ssl_ciphers 'TLS_AES_256_GCM_SHA384';
     ssl_prefer_server_ciphers on;
@@ -19,6 +19,6 @@ server {
         try_files $uri $uri/ /index.html;
     }
 
-    access_log /var/log/nginx/kan-search_access.log;
-    error_log /var/log/nginx/kan-search_error.log;
+    access_log /var/log/nginx/ks-gui-access.log;
+    error_log /var/log/nginx/ks-gui-error.log;
 }
