--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -2,33 +2,33 @@ name: Publish
 
 on:
   push:
-    branches:
-      - main
+    tags:
+      - "*"
 
 jobs:
-  create-tag:
-    name: create new tag
+  check-tag:
     runs-on: ubuntu-latest
-    if: ${{ !github.event.forced }}
     steps:
       - name: checkout
         uses: actions/checkout@v3
-      - name: read tag number
-        run: |
-          echo "VERSION=$(.github/scripts/extract_version.sh)" >> $GITHUB_ENV
-      - name: create tag
-        id: create_tag
-        uses: mathieudutour/github-tag-action@v6.2
         with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-          custom_tag: ${{ env.VERSION }}
-    outputs:
-      new_tag: ${{ steps.create_tag.outputs.new_tag }}
+          fetch-depth: 0
+      - name: create version env variables
+        run: |
+          VERSION_NPM=$(jq -r '.version' package.json)
+          echo "VERSION_NPM=${VERSION_NPM}" >> $GITHUB_ENV
+          echo "VERSION_TAG=${{ github.ref_name }}" >> $GITHUB_ENV
+      - name: fail job if version check fails
+        run: |
+          if [ "$VERSION_NPM" != "$VERSION_TAG" ]; then
+            echo "NPM version $VERSION_NPM does not match the tag $VERSION_TAG"
+            exit 1
+          fi
 
   build:
     name: build NPM package
     runs-on: ubuntu-latest
-    if: ${{ !github.event.forced }}
+    needs: check-tag
     steps:
       - name: checkout
         uses: actions/checkout@v3
@@ -52,7 +52,7 @@ jobs:
   publish-docker:
     name: publish Docker image
     runs-on: ubuntu-latest
-    needs: [create-tag, build]
+    needs: build
     env:
       OWNER: ${{ github.repository_owner }}
       REPO_NAME: ${{ github.event.repository.name }}
@@ -82,7 +82,7 @@ jobs:
       - name: publish docker image
         run: |
           img=ghcr.io/${{ env.OWNER }}/${{ env.REPO_NAME }}
-          version=${{ needs.create-tag.outputs.new_tag }}
+          version=${{ github.ref_name }}
           docker tag  $img $img:$version
           docker tag  $img $img:latest
           docker push $img:$version
@@ -91,7 +91,7 @@ jobs:
   publish-js:
     name: publish JavaScript files
     runs-on: ubuntu-latest
-    needs: [create-tag, build]
+    needs: build
     steps:
       - name: download the build artifact
         uses: actions/download-artifact@v4
@@ -104,6 +104,6 @@ jobs:
       - name: create release
         uses: softprops/action-gh-release@v2.0.4
         with:
-          tag_name: ${{ needs.create-tag.outputs.new_tag }}
+          tag_name: ${{ github.ref_name }}
           files: kant-search-frontend.zip
           token: ${{ secrets.GITHUB_TOKEN }}
