--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -93,6 +93,8 @@ jobs:
     runs-on: ubuntu-latest
     needs: build
     steps:
+      - name: checkout
+        uses: actions/checkout@v4
       - name: download the build artifact
         uses: actions/download-artifact@v4
         with:
@@ -105,5 +107,7 @@ jobs:
         uses: softprops/action-gh-release@v2.0.4
         with:
           tag_name: ${{ github.ref_name }}
-          files: kant-search-frontend.zip
+          files: |
+            kant-search-frontend.zip
+            deployment/nginx.conf
           token: ${{ secrets.GITHUB_TOKEN }}
