--- a/deployment/Dockerfile
+++ b/deployment/Dockerfile
@@ -1,6 +1,6 @@
 FROM nginx:alpine
 RUN rm /etc/nginx/conf.d/default.conf
-COPY ./deployment/nginx.conf /etc/nginx/nginx.conf
+COPY ./deployment/ksgui.conf /etc/nginx/ksgui.conf
 COPY ./kant-search-frontend/* /usr/share/nginx/html
 
 EXPOSE 4200
