refactor search module

--- a/angular.json
+++ b/angular.json
@@ -32,8 +32,8 @@
               "budgets": [
                 {
                   "type": "initial",
-                  "maximumWarning": "1mb",
-                  "maximumError": "2mb"
+                  "maximumWarning": "500kb",
+                  "maximumError": "1mb"
                 },
                 {
                   "type": "anyComponentStyle",
@@ -58,10 +58,10 @@
           "builder": "@angular-devkit/build-angular:dev-server",
           "configurations": {
             "production": {
-              "buildTarget": "kant-search-frontend:build:production"
+              "browserTarget": "kant-search-frontend:build:production"
             },
             "development": {
-              "buildTarget": "kant-search-frontend:build:development"
+              "browserTarget": "kant-search-frontend:build:development"
             }
           },
           "defaultConfiguration": "development"
@@ -69,7 +69,7 @@
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "buildTarget": "kant-search-frontend:build"
+            "browserTarget": "kant-search-frontend:build"
           }
         },
         "test": {
@@ -80,14 +80,10 @@
             "inlineStyleLanguage": "less",
             "assets": ["src/favicon.ico", "src/assets"],
             "styles": ["src/styles.less"],
-            "scripts": [],
-            "karmaConfig": "./karma.conf.js"
+            "scripts": []
           }
         }
       }
     }
-  },
-  "cli": {
-    "analytics": false
   }
 }
