--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "@angular/platform-browser": "^19.2.11",
     "@angular/platform-browser-dynamic": "^19.2.11",
     "@angular/router": "^19.2.11",
+    "@ant-design/icons": "^6.0.0",
+    "@ant-design/icons-angular": "^19.0.0",
     "@frhorschig/kant-search-api": "file:kant-search-api-generated/frhorschig-kant-search-api-0.20.0.tgz",
     "@ngrx/component-store": "^19.2.0",
     "@ngrx/operators": "^19.2.0",
@@ -27,6 +29,7 @@
     "@primeng/themes": "^19.1.3",
     "@types/snowball-stemmers": "^0.6.0",
     "jasmine-marbles": "^0.9.2",
+    "ng-zorro-antd": "^19.2.2",
     "primeng": "^19.1.3",
     "rxjs": "^7.4.0",
     "snowball-stemmers": "^0.6.0",
