update deployment files and documentation

--- a/deployment/Dockerfile
+++ b/deployment/Dockerfile
@@ -1,7 +1,7 @@
 FROM nginx:alpine
 RUN rm /etc/nginx/conf.d/default.conf
-COPY ./deployment/ksgui.conf /etc/nginx/ksgui.conf
-COPY ./kant-search-frontend/* /usr/share/nginx/html
+COPY ./deployment/ksgui.conf /etc/nginx/conf.d/default.conf
+COPY ./kant-search-frontend/ /usr/share/nginx/html/
 
-EXPOSE 4200
+EXPOSE 443
 CMD ["nginx", "-g", "daemon off;"]
