--- a/deployment/Dockerfile
+++ b/deployment/Dockerfile
@@ -1,7 +1,6 @@
-FROM nginx:alpine
+FROM nginx:1.29.0
 RUN rm /etc/nginx/conf.d/default.conf
-COPY ./deployment/ksgui.conf /etc/nginx/conf.d/default.conf
+COPY ./deployment/frontend.conf /etc/nginx/conf.d/default.conf
 COPY ./kant-search-frontend/ /usr/share/nginx/html/
 
-EXPOSE 443
 CMD ["nginx", "-g", "daemon off;"]
