--- a/deployment/frontend.conf
+++ b/deployment/frontend.conf
@@ -1,17 +1,13 @@
 server {
-    listen 443 ssl http2;
+    listen 443 ssl;
+    http2 on;
 
-    ssl_certificate /etc/nginx/ssl/ksgui.crt;
-    ssl_certificate_key /etc/nginx/ssl/ksgui.key;
-    ssl_protocols TLSv1.3;
-    ssl_ciphers 'ECDHE-ECDSA-AES128-GCM-SHA256:ECDHE-RSA-AES128-GCM-SHA256:ECDHE-ECDSA-AES256-GCM-SHA384:ECDHE-RSA-AES256-GCM-SHA384';
-    ssl_prefer_server_ciphers on;
-    ssl_session_cache shared:SSL:1m;
+    ssl_certificate /etc/nginx/ssl/frontend.crt;
+    ssl_certificate_key /etc/nginx/ssl/frontend.key;
+    ssl_protocols TLSv1.3 TLSv1.2;
+
+    ssl_session_cache shared:SSL:10m;
     ssl_session_timeout 24h;
-
-    add_header X-Frame-Options "SAMEORIGIN";
-    add_header X-Content-Type-Options "nosniff";
-    add_header X-XSS-Protection "1; mode=block";
 
     root   /usr/share/nginx/html;
     index  index.html;
