--- a/deployment/Dockerfile
+++ b/deployment/Dockerfile
@@ -1,6 +1,6 @@
 FROM nginx:1.29.0
 RUN rm /etc/nginx/conf.d/default.conf
 COPY ./deployment/frontend.conf /etc/nginx/conf.d/default.conf
-COPY ./kant-search-frontend/ /usr/share/nginx/html/
+COPY ./dist/browser/ /usr/share/nginx/html/
 
 CMD ["nginx", "-g", "daemon off;"]
