--- a/src/assets/config.json
+++ b/src/assets/config.json
@@ -1,3 +1,4 @@
 {
-  "apiUrl": "http://localhost:3000/api/v1"
+  "apiUrl": "http://localhost:3000/api/v1",
+  "korporaUrl": "https://korpora.org/kant"
 }
