make work groups configurable

--- a/src/assets/config.json
+++ b/src/assets/config.json
@@ -1,4 +1,117 @@
 {
   "apiUrl": "http://localhost:3000/api/v1",
-  "korporaUrl": "https://korpora.org/kant"
+  "korporaUrl": "https://korpora.org/kant",
+  "workGroups": [
+    {
+      "translateString": "ALL_GERMAN",
+      "codes": [
+        "ANTH",
+        "AP",
+        "AUSGLEICH",
+        "BDG",
+        "BEM_MORGEN",
+        "BUCHMACHEREI",
+        "DFS",
+        "EACG",
+        "EAD",
+        "FBZE",
+        "FE",
+        "FRAGE_AUFKLAERUNG",
+        "GAJFF",
+        "GMS",
+        "GNVE",
+        "GSE",
+        "GSK",
+        "GUGR",
+        "IDEE_GESCHICHTE",
+        "KPV",
+        "KRV_A",
+        "KRV_B",
+        "KU",
+        "LAMBERT_BRIEFWECHSEL",
+        "LOG",
+        "MAN",
+        "MENSCHENGESCH",
+        "MENSCHENRACE",
+        "MS",
+        "NACHRICHT_AERZTE",
+        "NEV",
+        "NG",
+        "NLBR",
+        "NTH",
+        "PAED",
+        "PG",
+        "PROL",
+        "REZ_HERDER",
+        "REZ_HUFELAND",
+        "REZ_MOSCATI",
+        "REZ_SCHULZ",
+        "REZ_SIL_2",
+        "REZ_SIL_8",
+        "REZ_ULRICH",
+        "RGV",
+        "SF",
+        "TG",
+        "THEODICEE",
+        "TP",
+        "TW",
+        "UD",
+        "UEE",
+        "UEGTP",
+        "UFE",
+        "VBO",
+        "VKK",
+        "VNAEF",
+        "VORREDE_PHIL",
+        "VRML",
+        "VT",
+        "VUB",
+        "VUE",
+        "VULKANE",
+        "VVRM",
+        "WDO",
+        "WITTERUNG",
+        "WOERTERBUCH",
+        "ZEF"
+      ]
+    },
+    {
+      "translateString": "PRECRITICAL",
+      "codes": [
+        "GSK",
+        "UFE",
+        "FE",
+        "NTH",
+        "Di",
+        "PND",
+        "VUE",
+        "GNVE",
+        "FBZE",
+        "MON_PH",
+        "TW",
+        "EACG",
+        "NLBR",
+        "VBO",
+        "GAJFF",
+        "DFS",
+        "BDG",
+        "NG",
+        "GSE",
+        "VKK",
+        "REZ_SIL_2",
+        "UD",
+        "NEV",
+        "TG",
+        "GUGR",
+        "MSI",
+        "REZ_MOSCATI",
+        "VVRM",
+        "AP"
+      ]
+    },
+    {
+      "translateString": "CRITIQUES",
+      "codes": ["KRV_B", "KPV", "KU"]
+    }
+  ]
 }
